--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cloudinary": "^2.8.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.561.0",
     "mongodb": "^7.0.0",
