--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
     "next": "16.0.10",
+    "nextjs-toploader": "^3.9.17",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-markdown": "^10.1.0",
