feat: Introduce environment-specific MongoDB URI handling and add cookie-based authentication as a fallback for API routes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        MONGODB_URI: ${MONGODB_URI}
+        MONGODB_URI: ${MONGODB_URI_PROD}
     container_name: portfolio-app
     restart: unless-stopped
     env_file:
